@@ -7,6 +7,8 @@ Version 2024.xxxxx (xxxxx 2024)
 - Implemented: Energy Dashboard
 - Implemented: Event Editor, storing/loading opened events
 - Implemented: Hour chart for P1 log
+- Implemented: MQTT-AD Climate Fan Mode
+- Implemented: MQTT-AD Climate Swing Mode
 - Implemented: OpenWeatherMap, API 3.0 support
 - Implemented: Event Editor, Close/Close All menu dropdown
 - Implemented: Possible to query a range of device states via JSON
